[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "school-intervention-env"
version = "1.0.0"
description = "RL environment for AI-driven school intervention decisions"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Abhinav Singh" }
]
dependencies = [
  "fastapi==0.104.1",
  "uvicorn==0.24.0",
  "pydantic==2.5.0",
  "numpy==1.24.3",
  "requests==2.31.0",
  "openai>=2.7.2",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]